--- a/views/history.ejs
+++ b/views/history.ejs
@@ -1,5 +1,6 @@
 <%include ./partials/header%>
 <div class="right h-[85vh] flex-1 flex relative px-6">
+    <%if(loggedUser){%>
     <div class="view-section w-2/3 overflow-y-auto h-full px-20 pt-8">
         <h1 class="text-4xl font-bold mb-10">Watch History</h1>
         <div class="day">
@@ -171,13 +172,28 @@
             </div>
         </div>
     </div>
-    <div class="history-options w-1/3 h-full px-2 py-24">
-        <div class="flex border-b border-zinc-900 w-80 py-2 mb-8 ml-3">
-            <i class="ri-search-2-line"></i>
-
-            <input class=" bg-transparent outline-none px-2" type="text" name=""
-                placeholder="Search watch history" id="">
+    
+    <%}else{%>
+        <div class="flex  w-2/3 h-full items-center pt-32 flex-col gap-4">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" style="pointer-events: none; display: block; width: 12%; height: max-content;" viewBox="0 0 24 24" width="24" focusable="false"><g><path d="M14.97 16.95 10 13.87V7h2v5.76l4.03 2.49-1.06 1.7zM22 12c0 5.51-4.49 10-10 10S2 17.51 2 12h1c0 4.96 4.04 9 9 9s9-4.04 9-9-4.04-9-9-9C8.81 3 5.92 4.64 4.28 7.38c-.11.18-.22.37-.31.56L3.94 8H8v1H1.96V3h1v4.74c.04-.09.07-.17.11-.25.11-.22.23-.42.35-.63C5.22 3.86 8.51 2 12 2c5.51 0 10 4.49 10 10z"></path></g></svg>
+            <h1 class="text-2xl">Keep track of what you watch</h1>
+            <p class="text-sm leading-tight mb-3">Watch history isn't viewable when signed out.</p>
+            <a class="button google" href="/login/federated/google"><button
+                    class="flex items-center hover:bg-blue-100 hover:border-transparent text-blue-600 gap-1.5 border border-zinc-300 px-2.5 rounded-full">
+                    <i class="ri-account-circle-line text-2xl opacity-90 mt-[2px]"></i>
+                    <span class="text-sm font-medium">Sign in</span>
+                </button></a>
         </div>
+        
+        <%}%>
+    <div class="history-options w-1/3 h-full px-2 py-24">
+        <%if(loggedUser){%>
+            <div class="flex border-b border-zinc-900 w-80 py-2 mb-8 ml-3">
+                <i class="ri-search-2-line"></i>
+                <input class=" bg-transparent outline-none px-2" type="text" name=""
+                    placeholder="Search watch history" id="">
+            </div>
+            <%}%>
         <div
             class="flex cursor-pointer hover:bg-zinc-200 items-center rounded-full gap-1.5 py-1.5 w-max mb-2 px-3">
             <i class="text-xl ri-delete-bin-line mr-1"></i>
@@ -188,6 +204,8 @@
             <i class="text-2xl ri-pause-line -mb-[2px]"></i>
             <h2 class="text-[1vw] font-medium">Pause watch history</h2>
         </div>
+        <%if(loggedUser){%>
+
         <div
             class="flex cursor-pointer hover:bg-zinc-200 items-center rounded-full gap-1.5 py-1.5 w-max mb-2 px-3">
             <i class="text-2xl ri-settings-2-line -mb-[2px]"></i>
@@ -200,6 +218,8 @@
         </div>
 
     </div>
+    <%}%>
+
 
 </div>
 <%include ./partials/footer%>
