--- a/views/you.ejs
+++ b/views/you.ejs
@@ -1,104 +1,129 @@
 <%include ./partials/header%>
-<div class="right h-[85vh] flex-1 relative px-28 py-2 overflow-y-auto">
-    <div class="about py-5 flex items-center gap-3">
-        <div class="profileImg h-[7.8vw] rounded-full overflow-hidden aspect-square">
-            <img class="h-full w-full object-cover"
-                src="https://yt3.googleusercontent.com/ytc/AIdro_lxymYXNITfuoAkr58fuQ1TCLZmjmHSG2IpYX20xw=s176-c-k-c0x00ffffff-no-rj"
-                alt="">
-        </div>
-        <div class="details">
-            <h1 class="text-4xl font-bold mb-2">Astha Lodhi</h1>
-            <div class="flex gap-1 items-center text-zinc-500 mb-3">
-                <p class="text-[.8rem] font-medium mb-2">@asthalodhi7880</p>
-                <i class="ri-circle-fill -mt-1.5 text-[4px]"></i>
-                <p class="text-[.8rem] font-medium mb-2">View Channel</p>
+    <div class="right h-[85vh] flex-1 relative px-28 py-2 overflow-y-auto">
+        <%if(loggedUser){%>
+            <div class="about py-5 flex items-center gap-3">
+                <div class="profileImg h-[7.8vw] rounded-full overflow-hidden aspect-square">
+                    <img class="h-full w-full object-cover"
+                        src="https://yt3.googleusercontent.com/ytc/AIdro_lxymYXNITfuoAkr58fuQ1TCLZmjmHSG2IpYX20xw=s176-c-k-c0x00ffffff-no-rj"
+                        alt="">
+                </div>
+                <div class="details">
+                    <h1 class="text-4xl font-bold mb-2">Astha Lodhi</h1>
+                    <div class="flex gap-1 items-center text-zinc-500 mb-3">
+                        <p class="text-[.8rem] font-medium mb-2">@asthalodhi7880</p>
+                        <i class="ri-circle-fill -mt-1.5 text-[4px]"></i>
+                        <p class="text-[.8rem] font-medium mb-2">View Channel</p>
+
+                    </div>
+                    <button class="px-2 py-1.5 text-[.8rem] mr-2 captiliaze font-medium bg-zinc-100 rounded-3xl"><i
+                            class="ri-account-box-line"></i> Switch Account</button>
+                    <button class="px-2 py-1.5 text-[.8rem] captiliaze font-medium bg-zinc-100 rounded-3xl"><i
+                            class="ri-google-fill"></i> Google Account</button>
+
+                </div>
+            </div>
+            <div class="flex items-center gap-1.5 w-full relative">
+                <i class="ri-history-line text-xl"></i>
+                <h2 class="font-semibold text-xl">History</h2>
+                <a class="text-sm text-blue-700 absolute top-1/2 -translate-y-1/2 right-0 ">See all</a>
 
             </div>
-            <button class="px-2 py-1.5 text-[.8rem] mr-2 captiliaze font-medium bg-zinc-100 rounded-3xl"><i
-                    class="ri-account-box-line"></i> Switch Account</button>
-            <button class="px-2 py-1.5 text-[.8rem] captiliaze font-medium bg-zinc-100 rounded-3xl"><i
-                    class="ri-google-fill"></i> Google Account</button>
+            <div class="history-videos mt-6 flex gap-1 flex-wrap ">
+                <div class="video w-52 h-max mb-3">
+                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
+                    <div class="about-video w-full relative mt-1">
+                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
+                        </h2>
+                        <h4 class="text-[.9vw]">channel name</h4>
+                        <h4 class="text-[.9vw]">11k watching</h4>
+                    </div>
+                </div>
+                <div class="video w-52 h-max mb-3">
+                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
+                    <div class="about-video w-full relative mt-1">
+                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
+                        </h2>
+                        <h4 class="text-[.9vw]">channel name</h4>
+                        <h4 class="text-[.9vw]">11k watching</h4>
+                    </div>
+                </div>
+                <div class="video w-52 h-max mb-3">
+                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
+                    <div class="about-video w-full relative mt-1">
+                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
+                        </h2>
+                        <h4 class="text-[.9vw]">channel name</h4>
+                        <h4 class="text-[.9vw]">11k watching</h4>
+                    </div>
+                </div>
+                <div class="video w-52 h-max mb-3">
+                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
+                    <div class="about-video w-full relative mt-1">
+                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
+                        </h2>
+                        <h4 class="text-[.9vw]">channel name</h4>
+                        <h4 class="text-[.9vw]">11k watching</h4>
+                    </div>
+                </div>
+                <div class="video w-52 h-max mb-3">
+                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
+                    <div class="about-video w-full relative mt-1">
+                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
+                        </h2>
+                        <h4 class="text-[.9vw]">channel name</h4>
+                        <h4 class="text-[.9vw]">11k watching</h4>
+                    </div>
+                </div>
+                <div class="video w-52 h-max mb-3">
+                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
+                    <div class="about-video w-full relative mt-1">
+                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
+                        </h2>
+                        <h4 class="text-[.9vw]">channel name</h4>
+                        <h4 class="text-[.9vw]">11k watching</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="flex items-center gap-1.5 w-full relative">
+                <i class="ri-history-line text-xl"></i>
+                <h2 class="font-semibold text-xl">Watch Later <span>23</span></h2>
+                <a class="text-sm text-blue-700 absolute top-1/2 -translate-y-1/2 right-0 ">See all</a>
 
-        </div>
-    </div>
-    <div class="flex items-center gap-1.5 w-full relative">
-        <i class="ri-history-line text-xl"></i>
-        <h2 class="font-semibold text-xl">History</h2>
-        <a class="text-sm text-blue-700 absolute top-1/2 -translate-y-1/2 right-0 ">See all</a>
+            </div>
+            <div class="history-videos mt-6 flex gap-1 flex-wrap ">
+                <div class="video w-52 h-max mb-3">
+                    <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
+                    <div class="about-video w-full relative mt-1">
+                        <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
+                        <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram
+                        </h2>
+                        <h4 class="text-[.9vw]">channel name</h4>
+                        <h4 class="text-[.9vw]">11k watching</h4>
+                    </div>
+                </div>
+            </div>
 
+            <%}else{%>
+                <div class="flex w-full h-full items-center pt-32 flex-col gap-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24"
+                        viewBox="0 0 24 24" width="24" focusable="false"
+                        style="pointer-events: none; display: block; width: 11%; height: max-content;">
+                        <path d="m11 7 6 3.5-6 3.5V7zm7 13H4V6H3v15h15v-1zm3-2H6V3h15v15zM7 17h13V4H7v13z"></path>
+                    </svg>
+                    <h1 class="text-2xl">Enjoy your favorite videos</h1>
+                    <p class="text-sm leading-tight mb-3">Sign in to access videos that you’ve liked or saved</p>
+                    <a class="button google" href="/login/federated/google"><button
+                            class="flex items-center hover:bg-blue-100 hover:border-transparent text-blue-600 gap-1.5 border border-zinc-300 px-2.5 rounded-full">
+                            <i class="ri-account-circle-line text-2xl opacity-90 mt-[2px]"></i>
+                            <span class="text-sm font-medium">Sign in</span>
+                        </button></a>
+                </div>
+                <%}%>
     </div>
-    <div class="history-videos mt-6 flex gap-1 flex-wrap ">
-        <div class="video w-52 h-max mb-3">
-            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-            <div class="about-video w-full relative mt-1">
-                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram</h2>
-                <h4 class="text-[.9vw]">channel name</h4>
-                <h4 class="text-[.9vw]">11k watching</h4>
-            </div>
-        </div>
-        <div class="video w-52 h-max mb-3">
-            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-            <div class="about-video w-full relative mt-1">
-                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram</h2>
-                <h4 class="text-[.9vw]">channel name</h4>
-                <h4 class="text-[.9vw]">11k watching</h4>
-            </div>
-        </div>
-        <div class="video w-52 h-max mb-3">
-            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-            <div class="about-video w-full relative mt-1">
-                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram</h2>
-                <h4 class="text-[.9vw]">channel name</h4>
-                <h4 class="text-[.9vw]">11k watching</h4>
-            </div>
-        </div>
-        <div class="video w-52 h-max mb-3">
-            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-            <div class="about-video w-full relative mt-1">
-                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram</h2>
-                <h4 class="text-[.9vw]">channel name</h4>
-                <h4 class="text-[.9vw]">11k watching</h4>
-            </div>
-        </div>
-        <div class="video w-52 h-max mb-3">
-            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-            <div class="about-video w-full relative mt-1">
-                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram</h2>
-                <h4 class="text-[.9vw]">channel name</h4>
-                <h4 class="text-[.9vw]">11k watching</h4>
-            </div>
-        </div>
-        <div class="video w-52 h-max mb-3">
-            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-            <div class="about-video w-full relative mt-1">
-                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram</h2>
-                <h4 class="text-[.9vw]">channel name</h4>
-                <h4 class="text-[.9vw]">11k watching</h4>
-            </div>
-        </div>
-    </div>
-    <div class="flex items-center gap-1.5 w-full relative">
-        <i class="ri-history-line text-xl"></i>
-        <h2 class="font-semibold text-xl">Watch Later <span>23</span></h2>
-        <a class="text-sm text-blue-700 absolute top-1/2 -translate-y-1/2 right-0 ">See all</a>
-
-    </div>
-    <div class="history-videos mt-6 flex gap-1 flex-wrap ">
-        <div class="video w-52 h-max mb-3">
-            <div class="vid bg-zinc-200 w-52 aspect-video rounded-lg"></div>
-            <div class="about-video w-full relative mt-1">
-                <i class="ri-more-2-fill text-sm absolute top-0 -right-1 "></i>
-                <h2 class="text-sm w-[90%] font-medium">LIVE - [DAY 10 ] -श्री शिवमहापुराण कथा | Jai Shree Ram</h2>
-                <h4 class="text-[.9vw]">channel name</h4>
-                <h4 class="text-[.9vw]">11k watching</h4>
-            </div>
-        </div>
-    </div>
-</div>
-<%include ./partials/footer%>
+    <%include ./partials/footer%>
