--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,23 @@
 </div>
 
 </div>
+
+<script>
+    function videoMouseEnterHandle(elem) {
+            if (elem.querySelector('.thumbnail')) {
+                elem.querySelector('.thumbnail').style.display = 'none';
+            }
+            elem.querySelector('video').currentTime = 0;
+            elem.querySelector('video');
+            elem.querySelector('video').play();
+        }
+        function videoMouseLeaveHandle(elem) {
+            if (elem.querySelector('.thumbnail')) {
+                elem.querySelector('.thumbnail').style.display = 'block';
+            }
+            elem.querySelector('video').pause();
+        }
+</script>
 </body>
 </html>
 
