--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,8 +29,8 @@
         <div class="header h-[8vh] flex justify-between py-2 px-7 text-xl">
             <div class="flex items-center gap-6">
                 <i class="ri-menu-line"></i>
-                <div class="flex items-center gap-1 h-2/5">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="external-icon" viewBox="0 0 90 20" focusable="false"
+                <!-- <div > -->
+                    <a href="/"class="flex items-center gap-1 h-2/5" ><svg xmlns="http://www.w3.org/2000/svg" class="external-icon" viewBox="0 0 90 20" focusable="false"
                         style="pointer-events: none; display: block; width: 100%; height: 100%;">
                         <svg viewBox="0 0 90 20" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
                             <g>
@@ -65,8 +65,8 @@
                                 </g>
                             </g>
                         </svg>
-                    </svg>
-                </div>
+                    </svg></a>
+                <!-- </div> -->
             </div>
             <div class="flex items-center gap-4">
                 <div class="flex items-center">
@@ -97,6 +97,7 @@
 
         </div>
         <div class="bottom w-full h-[91vh] flex">
+            <%if(leftSection){%>
             <div class="left h-full overflow-y-auto md:w-60 w-10 shrink-0 py-1 border-b-1">
                 <div class="border-b-[1px] px-3 py-2">
                     <a href="/">
@@ -249,3 +250,4 @@
 
 
             </div>
+            <%}%>
