--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,9 +36,8 @@
         max-width:100%;
         " class="videos shrink-0 py-5 gap-4 overflow-y-auto h-[85vh] ">
             <%shuffledVideos.forEach(function(video){%>
-                <a href="/video/<%=video._id%>" onmouseenter="videoMouseEnterHandle(this)"
+                <a class="h-max" href="/video/<%=video._id%>" onmouseenter="videoMouseEnterHandle(this)"
                     onmouseleave="videoMouseLeaveHandle(this)">
-
                     <div class="video mb-1">
                         <div onmouseenter="videoMouseEnterHandle(this)" onmouseleave="videoMouseLeaveHandle(this)"
                             class="cursor-pointer flex justify-center w-full rounded-xl h-56 bg-zinc-900 mb-2 relative overflow-hidden">
