--- a/views/studio.ejs
+++ b/views/studio.ejs
@@ -72,22 +72,7 @@
                 </div>
                 <h1 class="text-sm font-medium">Your Channel</h1>
                 <h1 class="text-sm font-medium text-zinc-600">Astha Lodhi</h1>
-                <div class="channel-opt w-full h-[45vh] mt-6 overflow-y-auto border">
-                    <div
-                        class="flex cursor-pointer hover:bg-zinc-200 md:justify-start justify-center items-center gap-4 py-1.5 px-5">
-                        <i class="ri-dashboard-fill text-2xl"></i>
-                        <h2 class="md:block hidden text-sm md:text-md">Dashboard</h2>
-                    </div>
-                    <div
-                        class="flex cursor-pointer hover:bg-zinc-200 md:justify-start justify-center items-center gap-4 py-1.5 px-5">
-                        <i class="ri-video-line text-2xl"></i>
-                        <h2 class="md:block hidden text-sm md:text-md">Content</h2>
-                    </div>
-                    <div
-                        class="flex cursor-pointer hover:bg-zinc-200 md:justify-start justify-center items-center gap-4 py-1.5 px-5">
-                        <i class="ri-bar-chart-box-line text-2xl"></i>
-                        <h2 class="md:block hidden text-sm md:text-md">Analytics</h2>
-                    </div>
+                <div class="channel-opt w-full max-h-[45vh] h-max mt-6 overflow-y-auto border">
                     <div
                         class="flex cursor-pointer hover:bg-zinc-200 md:justify-start justify-center items-center gap-4 py-1.5 px-5">
                         <i class="ri-message-2-line text-2xl"></i>
@@ -95,24 +80,20 @@
                     </div>
                     <div
                         class="flex cursor-pointer hover:bg-zinc-200 md:justify-start justify-center items-center gap-4 py-1.5 px-5">
-                        <i class="ri-copyright-line text-2xl"></i>
-                        <h2 class="md:block hidden text-sm md:text-md">Copyright</h2>
+                        <i class="ri-dashboard-fill text-2xl"></i>
+                        <h2 class="md:block hidden text-sm md:text-md">Lorem</h2>
                     </div>
                     <div
                         class="flex cursor-pointer hover:bg-zinc-200 md:justify-start justify-center items-center gap-4 py-1.5 px-5">
-                        <i class="ri-money-dollar-circle-line text-2xl"></i>
-                        <h2 class="md:block hidden text-sm md:text-md">Earn</h2>
+                        <i class="ri-video-line text-2xl"></i>
+                        <h2 class="md:block hidden text-sm md:text-md">Lorem</h2>
                     </div>
                     <div
                         class="flex cursor-pointer hover:bg-zinc-200 md:justify-start justify-center items-center gap-4 py-1.5 px-5">
-                        <i class="ri-list-view text-2xl"></i>
-                        <h2 class="md:block hidden text-sm md:text-md">Subtitles</h2>
+                        <i class="ri-bar-chart-box-line text-2xl"></i>
+                        <h2 class="md:block hidden text-sm md:text-md">Lorem</h2>
                     </div>
-                    <div
-                        class="flex cursor-pointer hover:bg-zinc-200 md:justify-start justify-center items-center gap-4 py-1.5 px-5">
-                        <i class="ri-edit-line text-2xl"></i>
-                        <h2 class="md:block hidden text-[.8rem] md:text-md break-all">Customization</h2>
-                    </div>
+              
                 </div>
                 <div
                     class="flex cursor-pointer hover:bg-zinc-200 w-full md:justify-start justify-center items-center gap-4 py-1.5 px-5">
@@ -128,9 +109,9 @@
             <div class="right w-[83vw] overflow-y-auto">
                 <h1 class="text-2xl font-medium p-5">Channel content</h1>
                 <div class="caetogary px-5 border-b border-b-zinc-200 w-full mt-5 flex gap-5 items-center">
-                    <h1
+                    <a href="/"><h1
                         class="font-semibold cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
-                        Home</h1>
+                        Home</h1></a>
                     <h1
                         class="font-semibold cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
                         Videos</h1>
@@ -146,14 +127,16 @@
                             class="ri-filter-3-line text-2xl text-zinc-400 mr-5"></i> Filter</h1>
                     <div class="filterdVideo px-5">
                         <%videos.forEach(function(video,i){%>
+
                             <div class="video relative border-b py-3 flex justify-between">
                                 <h1>
                                     <%=i+1%>
                                 </h1>
                                 <div class="video-desc flex gap-5">
-                                    <div onmouseenter="videoMouseEnterHandle(this)"
+
+                                    <a  href="/video/<%=video._id%>" onmouseenter="videoMouseEnterHandle(this)"
                                         onmouseleave="videoMouseLeaveHandle(this)"
-                                        class="cursor-pointer flex justify-center w-40 aspect-video h-max rounded-xl bg-zinc-900 mb-2 relative overflow-hidden">
+                                        class="cursor-pointer border flex justify-center w-40 aspect-video h-max rounded-xl bg-zinc-900 mb-2 relative overflow-hidden">
                                         <video class="h-full" ontimeupdate="pauseVideo(this)" muted preload="metadata" controlsList="nodownload" src="/uploads/videos/<%=video.videoName%>"></video>
                                         <%if(video.thumbnail){%>
                                             <div
@@ -162,7 +145,7 @@
                                                     class="w-full h-full object-cover" alt="">
                                             </div>
                                             <%}%>
-                                    </div>
+                                        </a>
 
                                     <div class="description w-[13vw]">
                                         <h1 class="font-medium ">
@@ -200,7 +183,7 @@
 
         let dynamicForm;
 
-        // minor onclick events
+        //--------------- minor onclick events
 
         function closeOverlay() {
             document.querySelector('.upload-overlay').style.display = "none"
@@ -217,7 +200,8 @@
         }
 
         function uploadingAnimation() {
-            document.querySelector('.upload-overlay .upload-icon').src = 'https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif'
+            document.querySelector('.upload-overlay .upload-icon').src = 'https://res.cloudinary.com/bytesizedpieces/image/upload/v1656084931/article/a-how-to-guide-on-making-an-animated-loading-image-for-a-website/animated_loader_gif_n6b5x0.gif'
+            document.querySelector('.upload-overlay .upload-icon').className ='upload-icon w-64'
             document.querySelector('.upload-overlay .selectFile').style.backgroundColor = "gray"
             document.querySelector('.upload-overlay .selectFile').classList.add('pointer-events-none')
 
@@ -236,12 +220,11 @@
             dynamicForm = document.createElement('form')
             dynamicForm.className = "upload-pannel sm:h-2/3 h-4/5 sm:w-[50rem] w-full bg-white flex items-center justify-center relative"
             dynamicForm.innerHTML = `
-            <input onchange="videoInputChangeHandle(this,'${uploadType}')" type="file" hidden name="video" id="videoFileInput">
-                <div class="description flex flex-col gap-4 justify-center items-center h-full w-full">
-                    <img src="https://static.vecteezy.com/system/resources/previews/025/638/297/original/simple-upload-file-icon-the-icon-can-be-used-for-websites-print-templates-presentation-templates-illustrations-etc-free-vector.jpg" class="upload-icon w-20 aspect-square rounded-full">
-
+            <input onchange="videoInputChangeHandle(this,'${uploadType}')" type="file" accept="video/*" hidden name="video" id="videoFileInput">
+                <div class="description flex flex-col justify-center items-center h-full w-full">
+                    <img class="upload-icon w-24 mb-6 h-max" src="https://static.vecteezy.com/system/resources/previews/017/346/149/non_2x/upload-icon-design-free-vector.jpg">
                     <h1 onclick="selectVideoFile()"
-                        class="selectFile cursor-pointer md:text-xl text-sm font-medium  bg-blue-500 px-4 py-2 rounded text-white">
+                        class="selectFile cursor-pointer md:text-xl text-sm font-medium bg-blue-500 px-4 py-2 rounded text-white">
                         Select a file</h1>
                 </div>
             `
@@ -355,31 +338,25 @@
                             <div onclick="setFocus(this)" class="border mt-6 border-zinc-700 rounded-md p-1 px-3">
                                 <span class="pointer-events-none text-[.8rem]">Description</span>
                                 <textarea class="focus-me bg-transparent w-full text-zinc-900 outline-none relative text-md"
-                                    name="description" id="" placeholder="Tell viewers about your video.">
-                                        </textarea>
-                            </div>
-                            <div onclick="setFocus(this)" class="border mt-6 border-zinc-700 rounded-md p-1 px-3">
-                                <span class="pointer-events-none text-[.8rem]">Tags <span class="opacity-50">(must be comma (,) separated.)</span></span>
-                                <input class="focus-me video-title-inp bg-transparent w-full outline-none relative text-sm h-6" name="tags" id=""
-                                    placeholder="Add new tags." >
+                                    name="description" id="" placeholder="Tell viewers about your video."></textarea>
                             </div>
 
                             <h2 class="text-md font-medium mt-7">Thumbnail</h2>
                             <input onchange="thumbnailInputChangeHandle(this,'${response._id}')" type="file" accept="image/*" hidden name="thumbnail" id="thumbnailFileInput">
-                            <div onclick="selectThumbnailFile()" class="thumbnail rounded-t-md max-w-80 aspect-video bg-zinc-400">
+                            <div onclick="selectThumbnailFile()" class="thumbnail rounded-t-md max-w-40 mt-2 aspect-video bg-zinc-400">
                                 <img src="/uploads/images/add.jpg" class="w-full object-cover h-full" alt="">
                             </div>
                             <h2 class="text-md font-medium mt-7 mb-2">Visibility</h2>
-                            <div class="border border-zinc-700 rounded-md py-4 px-3">
+                            <div class="border border-zinc-700 rounded-md py-2 px-3">
                                 <div class="flex gap-2 items-center px-1 cursor-pointer w-max mb-2">
                                     <input type="radio" name="visibility" value="private" checked
                                         class="bg-yellow-100 cursor-pointer scale-125">
-                                    <label for="" class="cursor-pointer">Private</label>
+                                    <label for="" class="cursor-pointer text-sm">Private</label>
                                 </div>
-                                <div class="flex gap-2 items-center px-1 cursor-pointer w-max mb-2">
+                                <div class="flex gap-2 items-center px-1 cursor-pointer w-max">
                                     <input type="radio" name="visibility" value="public"
                                         class="bg-yellow-100 cursor-pointer scale-125">
-                                    <label for="" class="cursor-pointer">Public</label>
+                                    <label for="" class="cursor-pointer text-sm">Public</label>
                                 </div>
                             </div>
                         </div>
@@ -427,31 +404,25 @@
                             <div onclick="setFocus(this)" class="border mt-6 border-zinc-700 rounded-md p-1 px-3">
                                 <span class="pointer-events-none text-[.8rem]">Description</span>
                                 <textarea class="focus-me bg-transparent w-full text-zinc-900 outline-none relative text-md"
-                                    name="description" id="" placeholder="Tell viewers about your video.">${description}
-                                        </textarea>
-                            </div>
-                            <div onclick="setFocus(this)" class="border mt-6 border-zinc-700 rounded-md p-1 px-3">
-                                <span class="pointer-events-none text-[.8rem]">Tags <span class="opacity-50">(must be comma (,) separated.)</span></span>
-                                <input class="focus-me video-title-inp bg-transparent w-full outline-none relative text-sm h-6" name="tags" id=""
-                                    placeholder="Add new tags." >
+                                    name="description" id="" placeholder="Tell viewers about your video.">${description}</textarea>
                             </div>
 
                             <h2 class="text-md font-medium mt-7">Thumbnail</h2>
                             <input type="file" hidden name="thumbnail" id="thumbnailFileInput">
-                            <div onclick="selectThumbnailFile()" class="thumbnail rounded-t-md max-w-80 aspect-video bg-zinc-400">
+                            <div onclick="selectThumbnailFile()" class="thumbnail rounded-t-md max-w-40 mt-2 aspect-video bg-zinc-400">
                                 <img src="/uploads/images/add.jpg" class="w-full object-cover h-full" alt="">
                             </div>
                             <h2 class="text-md font-medium mt-7 mb-2">Visibility</h2>
-                            <div class="border border-zinc-700 rounded-md py-4 px-3">
+                            <div class="border border-zinc-700 rounded-md py-2 px-3">
                                 <div class="flex gap-2 items-center px-1 cursor-pointer w-max mb-2">
                                     <input type="radio" name="visibility" value="private" checked
                                         class="bg-yellow-100 cursor-pointer scale-125">
-                                    <label for="" class="cursor-pointer">Private</label>
+                                    <label for="" class="cursor-pointer text-sm">Private</label>
                                 </div>
-                                <div class="flex gap-2 items-center px-1 cursor-pointer w-max mb-2">
+                                <div class="flex gap-2 items-center px-1 cursor-pointer w-max">
                                     <input type="radio" name="visibility" value="public"
                                         class="bg-yellow-100 cursor-pointer scale-125">
-                                    <label for="" class="cursor-pointer">Public</label>
+                                    <label for="" class="cursor-pointer text-sm">Public</label>
                                 </div>
                             </div>
                         </div>
@@ -490,22 +461,10 @@
 
         function thumbnailInputChangeHandle(input, videoId) {
             if (input.files[0].type.includes('image')) {
-                uploadThumbnail(videoId);
+                document.querySelector('.thumbnail img').src= URL.createObjectURL(input.files[0])
             }
         }
 
-        function uploadThumbnail(videoid) {
-            let file = document.getElementById('thumbnailFileInput').files[0];
-            let formData = new FormData();
-            formData.append('thumbnail', file);
-            fetch(`/upload/thumbnail/${videoid}`, {
-                method: 'POST',
-                body: formData
-            }).then(raw => raw.json())
-                .then(function (response) {
-                    document.querySelector('.thumbnail img').setAttribute('src', `/uploads/images/${response.thumbnail}`)
-                })
-        }
 
         
     </script>
