--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -83,7 +83,9 @@
                 <%if(loggedUser){%>
                     <i class="ri-video-add-line hover:bg-zinc-100 rounded-full py-1.5 px-2.5 min-w-max"></i>
                     <i class="ri-notification-2-line hover:bg-zinc-100 rounded-full py-1.5 px-2.5 min-w-max"></i>
-                    <div class="w-7 aspect-square rounded-full bg-blue-300">
+
+                    <div class="w-7 aspect-square rounded-full bg-blue-300 overflow-hidden">
+                        <img src="/uploads/images/def.jpg" alt="" class="w-full h-full object-cover">
                     </div>
                     <%}else{%>
                         <i class="ri-more-2-line hover:bg-zinc-100 rounded-full py-1.5 px-2.5 min-w-max"></i>
