--- a/views/viewVideo.ejs
+++ b/views/viewVideo.ejs
@@ -196,7 +196,7 @@
     </div>
   </div>
 
-  <script src="/javascripts/player.js"></script>
+  <!-- <script src="/javascripts/player.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
     integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -244,8 +244,10 @@
       }
       likeIcon.classList.toggle('ri-thumb-up-line')
       likeIcon.classList.toggle('ri-thumb-up-fill')
+      console.log(btn.querySelector('span'))
       axios.post(`/like/video/${videoId}`)
-        .then(response => {
+      .then(response => {
+          console.log(response.data)
           btn.querySelector('span').innerHTML = response.data
         })
     }
@@ -282,7 +284,6 @@
         btn.className = "bg-zinc-200 hover:bg-zinc-300 px-4 py-1.5 rounded-full text-md flex items-center gap-1 ml-2 overflow-hidden w-max"
         btn.innerHTML = `<i class="ri-notification-3-fill mr-1"></i>Subscribed</i>`
         btn.style.backgroundColor = "green"
-        // btn.style.backgroundColor ="#e4e4e7"
 
       } else {
         btn.style.backgroundColor = "black"
@@ -297,8 +298,11 @@
       axios.post(`/watchLater/video/${videoId}`)
     }
 
+  
+
     function comment(btn, videoId) {
       let inp = btn.parentNode.querySelector('input')
+      if(inp.value==='')return
       axios.post(`/comment/video/${videoId}`, {
         comment: inp.value
       })
@@ -333,6 +337,7 @@
 
 
     function showReplyBox(elem,commentId){
+
       if(document.querySelector(`#reply${commentId}`))return;
       let replyBox = document.createElement("div")
       replyBox.className ='reply-inp flex gap-3'
@@ -340,8 +345,8 @@
       replyBox.innerHTML = `
       <div class="img w-8 aspect-square shrink-0 h-max bg-gray-500 rounded-full"></div>
                 <div class="w-full">
-                  <input type="text" name="" id=""
-                    class="w-full px-1 mb-2 border-b border-zinc-700 bg-transparent outline-none">
+                  <input type="text" name="" id="" placeholder="type reply.."
+                    class="w-full px-1 mb-2 text-sm py-1 border-b border-zinc-700 bg-transparent outline-none">
                     <div class="flex w-full justify-end gap-2">
                   <button onclick="removeReplyBox(this,'${commentId}')"
                     class="bg-zinc-200 rounded-full px-4 py-1 text-sm font-medium">Cancel</button>
@@ -352,6 +357,7 @@
       `
             elem.parentNode.insertAdjacentElement('afterend', replyBox);
 
+            document.querySelector(`#reply${commentId} input`).focus()
     }
 
     function removeReplyBox(elem, commentId){
@@ -390,12 +396,24 @@
     }
 
     function showReplies(btn,commentId) {
+
       let repliescontainer = btn.parentNode.querySelector('.replies')
+      // if(btn,textContent.includes('hide'))
+      console.log(btn.textContent.includes('hide'))
+      if(btn.textContent.includes('hide')){
+        repliescontainer.innerHTML=''
+        btn.textContent="view replies"
+        return
+
+      }
+
+      btn.textContent="hide replies"
       axios.post('/replies',{
         commentId:commentId
       })
       .then(response=>{
-         response.data.forEach(reply=>{
+        repliescontainer.innerHTML=''
+        response.data.forEach(reply=>{
           repliescontainer.innerHTML+=`
           <div class="comment flex gap-1 mt-5">
           <div class="img w-8 aspect-square h-max bg-gray-500 rounded-full"></div>
